@@ -9,6 +9,9 @@ xymon (4.3.25) stable; urgency=high
      (Thanks, Axel Beckert)
    * Improve error handling slightly in the CGI wrapper
    * Fix missing network interface graph data on FreeBSD (Niko <nicolas@lienard.name>)
+   * In xymonnet, a rare SSL error state that could occur after a 
+     connection is opened will now be considered "service down"        
+
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Mon, XX Dec 2015 17:40:00 -0800
 
