@@ -7,6 +7,8 @@ Changes from 4.3.24 -> 4.3.25 (unreleased)
   (Thanks, Axel Beckert)
 * Improve error handling slightly in the CGI wrapper
 * Fix missing network interface graph data on FreeBSD (Niko <nicolas@lienard.name>)
+* In xymonnet, a rare SSL error state that could occur after a 
+  connection is opened will now be considered "service down"
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
